Fix precommit, and a couple warnings...